switches nft-input to flex, resolves alignment

--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,9 @@ h1 {
     }
 }
 #nft-input {
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: absolute;
     height: 49px;
     left: 0;
@@ -90,12 +92,10 @@ h1 {
     font-weight: bold;
     text-align: center;
     margin: 200px 0 40px 0; 
-    justify-content: space-between;
 }
 #nft_url {
-    display: inline;
+    display: block;
     z-index: 1;
-    justify-content: space-between;
     color: #3d3d3d;
     font-family: Calibri;
     font-size: 16px;
@@ -126,6 +126,7 @@ h1 {
     background-color: #ffffff;
     padding: 0px 30px 0px 30px;
     height: 49px;
+    width: 101.5px;
     outline: solid 2.25px #222222;
     border: none;
     border-radius: 5px;
